Add team list and Cypress
The teams API is created to consume from the frontend. Also, Cypress is added to test the front.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": [
     "airbnb-base",
+    "plugin:import/typescript",
+    "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
     "plugin:react/jsx-runtime",
     "plugin:prettier/recommended",
