--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-ts-crud-clubes",
   "version": "0.1.0",
+  "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -27,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "nodemon src/server/index.js",
+    "dev": "npx nodemon src/server/index.ts",
     "cy:run": "cypress run",
     "cy:open": "cypress open"
   },
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "autoprefixer": "^10.4.7",
@@ -65,6 +67,7 @@
     "eslint-plugin-react": "^7.30.0",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "ts-node": "^10.8.0"
   }
 }
